--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello world</title>
+    <script>
+        fetch('https://neculai-stanciu.github.io/my-codelabs/README.md')
+          .then(function(response) {
+            console.log("Request with success: ",response.text());
+          }).catch(err => console.log("error: ",err));
+    </script>
 </head>
 <body>
     <h1> Hello github pages </h1>
