--- a/codelabs/24242443/index.html
+++ b/codelabs/24242443/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <title>TomTom Creating a custom Gangnam vector map style</title>
   <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../elements/codelab.html">
+  <link rel="import" href="../elements/codelab.html">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <style is="custom-style">
     body {
