Added display flex on cards

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
       });
     }
   </script>
+  <style>
+  #codelabs {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  </style>
 </head>
 
 <body>
