Fixed issue with index.html in codelab dir

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         summary: codelab.summary,
         containsPresentation: codelab.containsPresentation,
         presentationLink: 'presentations/' + codelab.id,
-        codelabLink: 'codelabs/' + codelab.id,
+        codelabLink: `codelabs/${codelab.id}/index.html`,
         containsDemo: codelab.containsDemo,
         demoLink: 'demo/' + codelab.id,
         createdDate: new Date(codelab.updated).toLocaleDateString(),
