some minor corrections

--- a/codelabs/kt-basics/index.html
+++ b/codelabs/kt-basics/index.html
@@ -84,10 +84,11 @@
       </google-codelab-step>
     
       <google-codelab-step label="What&#39;s next?" duration="0">
-        <p>Options</p>
+        <p><strong>Options</strong></p>
 <ol type="1">
-<li>Functional programming with kotlin</li>
-<li>Reactive programming with kotlin</li>
+<li>Functional programming in kotlin</li>
+<li>Kotlin Reactive programming</li>
+<li>Micronaut and Kotlin</li>
 <li>Kotlin 1.4</li>
 </ol>
 
