[presentation][skip] what to cover next

--- a/codelabs/kt-basics/index.html
+++ b/codelabs/kt-basics/index.html
@@ -111,8 +111,23 @@
 
       </google-codelab-step>
     
-      <google-codelab-step label="Micronaut http client in kotlin" duration="0">
-        <p>This will be moved in a separate codelab!!!</p>
+      <google-codelab-step label="OOP in Kotlin" duration="0">
+        <p>What to do next:</p>
+<ul>
+<li>val, var</li>
+<li>fun</li>
+<li>const val</li>
+<li>data class</li>
+<li>primary constructor</li>
+<li>inheritance, implementation</li>
+<li>custom getters/setters</li>
+<li>primary and secondary constructors</li>
+<li>singleton with object</li>
+<li>companion object</li>
+<li>delegation (by)</li>
+<li>generics</li>
+</ul>
+<p>This will be moved in a separate codelab!!!</p>
 
 
       </google-codelab-step>
