add show it on github

--- a/codelabs/kt-basics/index.html
+++ b/codelabs/kt-basics/index.html
@@ -96,6 +96,7 @@
     user?.address shouldBe &#34;Mihai Bravu&#34;
   }
 </code></pre>
+<p>Show it on <a href="https://github.com/jtonic/tony_software_development_cookbook/commit/f6240e22b4d192ead921439ca43ded04fc6fb44c" target="_blank">github</a></p>
 <ul>
 <li><strong>elvis operator</strong> (<code>?:</code>)</li>
 </ul>
@@ -107,6 +108,7 @@
     address shouldBe &#34;Kotlin Island&#34;
   }
 </code></pre>
+<p>Show it on <a href="https://github.com/jtonic/tony_software_development_cookbook/commit/afade3bcd15793ff398c2b39c4c288df8fd26cbf" target="_blank">github</a></p>
 
 
       </google-codelab-step>
@@ -125,7 +127,9 @@
 <li>singleton with object</li>
 <li>companion object</li>
 <li>delegation (by)</li>
-<li>generics</li>
+<li>generics (reified)</li>
+<li>alias</li>
+<li>inline classes</li>
 </ul>
 <p>This will be moved in a separate codelab!!!</p>
 
