--- a/codelabs/kt-basics/index.html
+++ b/codelabs/kt-basics/index.html
@@ -318,6 +318,9 @@
 <ul>
 <li>val, var</li>
 <li>fun</li>
+<li>(default) visibility modifiers</li>
+<li>open/close classes/methods</li>
+<li>extension methods</li>
 <li>const val</li>
 <li>data class</li>
 <li>primary constructor</li>
