--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         title: codelab.title,
         summary: codelab.summary,
         containsPresentation: codelab.containsPresentation,
-        presentationLink: 'presentations/' + codelab.id,
+        presentationLink: 'presentations/' + codelab.id + '/index.html',
         codelabLink: `codelabs/${codelab.id}/index.html`,
         containsDemo: codelab.containsDemo,
         demoLink: 'demo/' + codelab.id,
